# goap

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-Apache-2.0  LICENSE-BSD-3-Clause  LICENSE-MIT  README.md
examples/: base_building.rs  combat_strategy.rs  enum_usage.rs  get_planks.rs  get_wood.rs  modifiable_state_usage.rs  mutable_state.rs  mutatable_actions.rs  mutatable_goals.rs  navigation_2d.rs  patrol.rs  resource_management.rs  rpg_party.rs  simple_enum.rs  stealth_mission.rs  temperature_control.rs  trading.rs
src/: actions.rs  goals.rs  lib.rs  planner.rs  prelude.rs  state.rs
tests/: actions.rs  goals.rs  planner.rs  state.rs
