[package]
name = "goap"
version = "0.1.0"
edition = "2024"
authors = [
    "Jacques Joubert <20562845+frederickjjoubert@users.noreply.github.com>",
]
description = "A general purpose Goal-Oriented Action Planning (GOAP) library written in Rust."
readme = "README.md"
license = "MIT OR Apache-2.0 OR BSD-3-Clause"

[dependencies]
